--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <button id="button">Trigger Webhook</button>
+    <button id="button">Activate Bunee</button>
     <script src="script.js"></script>
   </body>
 </html>
