--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <button id="button">Activate Bunee</button>
+    <button id="button">Activate Bunee!</button>
     <script src="script.js"></script>
   </body>
 </html>
